# ks959-bridge

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  KNOWLEDGE.md  README.md  session-ses_0c34.md
archives/: session-ses_0c94.md  session-ses_0c94.old.md  session-ses_0e86.md
docs/: ARCHITECTURE.md  PROTOCOL.md  SETUP.md  STATUS.md  TESTING.md
kmod/: ..module-common.o.cmd  .Module.symvers.cmd  .ks959_speed.ko.cmd  .ks959_speed.mod.cmd  .ks959_speed.mod.o.cmd  .ks959_speed.o.cmd  .modules.order.cmd  Makefile  ks959_speed.c  ks959_speed.ko  ks959_speed.mod  ks959_speed.mod.c  modules.order
src/: main.rs  pty_bridge.rs  sir_framing.rs  usb_dongle.rs
