[package]
name = "ks959-bridge"
version = "0.1.0"
edition = "2021"
description = "Userspace IrDA SIR driver for Kingsun KS-959 USB dongle, exposing a PTY for libdivecomputer"

[dependencies]
# USB
nusb = "0.1"

# Async runtime
tokio = { version = "1", features = ["rt", "macros", "net", "signal", "time"] }

# PTY / Unix
nix = { version = "0.29", features = ["term", "ioctl", "fs"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }
